Modified runkotlin.sh. Notifies when error in compiling occurs.