@@ -3,10 +3,25 @@ FILE=$2
 
 cd $DIR
 
-echo "creating ${FILE}.jar file..."
-kotlinc "${FILE}.kt" -include-runtime -d "${FILE}.jar"
-
-echo "executing ${FILE}.jar file..."
 echo
-java --illegal-access=permit -jar ${FILE}.jar
+echo "compiling ${FILE}.kt to ${FILE}.jar file..."
+kotlinc "${FILE}.kt" -include-runtime -d "${FILE}.jar"
+echo 
+
+if [[ $? -ne 0 ]]
+then
+	echo "Compilation failed..."
+	echo 
+else
+	echo "Successfully created ${FILE}.jar file..."
+	echo "Executing ${FILE}.jar file..."	
+	echo 
+	java -jar ${FILE}.jar
+	echo 
+	echo "End of execution..."
+	echo "Terminating..."
+fi
+
+
+
 
